Update accounting - Copy.html

--- a/maincourse/accounting - Copy.html
+++ b/maincourse/accounting - Copy.html
@@ -92,7 +92,7 @@ i {
   .containert{
     user-select: none;
     margin: 100px auto;
-    background: #240a97;
+    background: #00832e;
     color: #b3b8cd;
     border-radius: 5px;
     width: 250px;
@@ -146,21 +146,21 @@ i {
 <h2 class="h22"><span><b>G</b>-<i>TEC</i></span></h2>
   <!--------------------------------------how to add cource here testing------------------------------------------->
 <div class="right" style="background-color:#ddd;">
-  <h1> Accounting Course</h1>
+  <h1>Fasion Designing</h1>
     <!-------------------------------------first course------------------------------------------------------->
     <div class="card">
-      <img src="../images/difa.jpg" alt="Denim Jeans" style="width:100%">
-      <h1>DIFA</h1>
+      <img src="../images/fsh.jfif" alt="Denim Jeans" style="width:100%">
+      <h1>MDFD</h1>
       <p class="price">Fee ₹25180</p>
-      <p>Duration. 8 months</p>
+      <p>Duration.  1 year</p>
       <p>click more Details to viwe your certification and more</p>
       <p><button onclick="location.href='../course/difa.html';">more Details</button></p>
       <br>
     </div>
     <!-------------------------------------second course------------------------------------------------------->
     <div class="card">
-      <img src="../images/dfa.jpg" alt="Denim Jeans" style="width:100%" name="soft" id="soft">
-      <h1>DFA</h1>
+      <img src="../images/dfd.png" alt="Denim Jeans" style="width:100%" name="soft" id="soft">
+      <h1>DFD</h1>
       <p class="price">Fee ₹14700</p>
       <p>Duration. 6 months</p>
       <p>click more Details to viwe your certification and more</p>
@@ -169,8 +169,8 @@ i {
     </div>
     <!-------------------------------------therd course------------------------------------------------------->
     <div class="card">
-      <img src="../images/tally.webp" alt="Denim Jeans" style="width:100%">
-      <h1>TALLY</h1>
+      <img src="../images/cct.jpg" alt="Denim Jeans" style="width:100%">
+      <h1>CCT</h1>
       <p class="price">Fee ₹6300</p>
       <p>Duration. 3 months</p>
       <p>click more Details to viwe your certification and more</p>
@@ -183,17 +183,18 @@ i {
 
 <!------------------------------------------------------teachers profile card test------------------------->
 
-<div class="mainback">
-  <h1>YOUR TEACHER</h1>
-  <div class="containert">
-    <div class="covertt-photot">
-      <img src="../images/RASIK.jpg" class="profilet" alt="photo">
+
+    <div class="mainback">
+      <h1>YOUR TEACHER</h1>
+      <div class="containert">
+        <div class="covertt-photot">
+          <img src="../images/userp.png" class="profilet" alt="photo">
+        </div>
+        <div class="profilet-namet"><span></span>ASWATHI KRISHNAN</div>
+          <p class="aboutt">Fasion Designing<br></p>
+        </div>
+      </div>
     </div>
-    <div class="profilet-namet"><span></span> Rasik k </div>
-      <p class="aboutt">Accounting<br>Tally</p>
-    </div>
-  </div>
-</div>
 
 
 
