--- a/course.html
+++ b/course.html
@@ -338,6 +338,8 @@ i {
       <a href="maincourse/accounting.html">Accounting</a>
       <a href="maincourse/Multimed.html">Multimedia</a>
       <a href="maincourse/FSH.html">fashon</a>
+      <a href="tse.html">ts1</a>
+      <a href="tss.html">ts2</a>
     </div>
   </div> 
 </div>
