--- a/course.html
+++ b/course.html
@@ -337,7 +337,7 @@ i {
       <a href="maincourse/software.html" for="soft" id="soft">Software</a>
       <a href="maincourse/accounting.html">Accounting</a>
       <a href="maincourse/Multimed.html">Multimedia</a>
-      <a href="maincourse/FSH.html">fashon</a>
+      <a href="maincourse/fsh.html">fashon</a>
       <a href="tse.html">ts1</a>
       <a href="tss.html">ts2</a>
     </div>
