--- a/course.html
+++ b/course.html
@@ -336,7 +336,7 @@ i {
     <div class="cdropdown-ccontent">
       <a href="maincourse/software.html" for="soft" id="soft">Software</a>
       <a href="maincourse/accounting.html">Accounting</a>
-      <a href="maincourse/Multimed.html">Multimedia</a>
+      <a href="maincourse/multimed.html">Multimedia</a>
       <a href="maincourse/fsh.html">fashon</a>
       <a href="tse.html">ts1</a>
       <a href="tss.html">ts2</a>
