--- a/course.html
+++ b/course.html
@@ -338,8 +338,8 @@ i {
       <a href="maincourse/accounting.html">Accounting</a>
       <a href="maincourse/multimed.html">Multimedia</a>
       <a href="maincourse/fsh.html">fashon</a>
-      <a href="tse.html">ts1</a>
-      <a href="tss.html">ts2</a>
+      <a href="maincourse/tse.html">ts1</a>
+      <a href="maincourse/tss.html">ts2</a>
     </div>
   </div> 
 </div>
