--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 body{
   width: 100%;
   
-  background-image:linear-gradient(rgb(0,0,0,0.75),rgb(0,0,0,0.75)), url(../images/bgn7.jpg);
+  background-image:linear-gradient(rgb(0,0,0,0.75),rgb(0,0,0,0.75)), url(/images/bgn7.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
