--- a/index.html
+++ b/index.html
@@ -13,11 +13,6 @@
     <style>
 body{
   width: 100%;
-  
-  background-image:linear-gradient(rgb(0,0,0,0.75),rgb(0,0,0,0.75)), url(/images/bgn7.jpg);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
   height: 100vh;
 }
 .topnav {
@@ -389,7 +384,12 @@ border-radius: 5px solid  green;
 }
 
 /*--------------------------------------------------------- ANIMATED TEST ------------------------------------------*/
-
+body {
+    background-image:linear-gradient(rgb(0,0,0,0.75),rgb(0,0,0,0.75)), url(/images/bgn7.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+ }
 @import url(https://fonts.googleapis.com/css?family=Khula:700);
 
 .hidden {
