--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@ border-radius: 5px solid  green;
 
 /*--------------------------------------------------------- ANIMATED TEST ------------------------------------------*/
 body {
-    background-image:linear-gradient(rgb(0,0,0,0.75),rgb(0,0,0,0.75)), url(images/bgn7.jpg);
+    background:linear-gradient(rgb(0,0,0,0.75),rgb(0,0,0,0.75)), url(images/bgn7.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
